# models/UserBasic.go
@@ -36,3 +36,15 @@ func GetUserList() []*UserBasic {
 	}
 	return data
 }
+
+func CreateUser(user *UserBasic) *gorm.DB {
+	return utils.DB.Create(&user)
+}
+
+func DeleteUser(user *UserBasic) *gorm.DB {
+	return utils.DB.Delete(&user)
+}
+
+func UpdateUser(user *UserBasic) *gorm.DB {
+	return utils.DB.Model(&user).Updates(UserBasic{Name: user.Name, Password: user.Password})
+}
