# router/app.go
@@ -21,5 +21,9 @@ func Router() *gin.Engine {
 
 	r.GET("/index", service.GetIndex)
 	r.GET("/user/GetUserList", service.GetUserList)
+	r.GET("/user/CreateUser", service.CreateUser)
+	r.GET("/user/DeleteUser", service.DeleteUser)
+	r.POST("/user/UpdateUser", service.UpdateUser)
+
 	return r
 }
